--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,31 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>CurrencyConverter</title>
+  <title>Currency Converter</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <style>
+    div.welcome-msg {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      text-transform: uppercase;
+      color: #673ab7;
+      font-size: 2.5em;
+      text-align: center;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    }
+  </style>
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="welcome-msg">Hey stranger! <br /> Welcome to my awesome Currency Converter Web App.</div>
+  </app-root>
 </body>
+
 </html>
